[gd_scene load_steps=6 format=3 uid="uid://cy22favvd1vsj"]

[ext_resource type="Script" uid="uid://dtnxbbta62fa4" path="res://_common/scene_transition/scene_transition.gd" id="1_67fj4"]

[sub_resource type="Gradient" id="Gradient_67fj4"]
offsets = PackedFloat32Array(0, 0.8394794, 0.9436009)
colors = PackedColorArray(1, 0, 1, 1, 1, 0.912314, 1, 0, 1, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uw147"]
gradient = SubResource("Gradient_67fj4")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Gradient" id="Gradient_uw147"]
colors = PackedColorArray(1, 0, 0, 1, 1, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rj7eu"]
gradient = SubResource("Gradient_uw147")
width = 4
height = 4
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="SceneTransition" type="Area2D"]
z_index = 1
collision_layer = 0
monitorable = false
script = ExtResource("1_67fj4")

[node name="SpawnMarker" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 32)
texture = SubResource("GradientTexture2D_uw147")

[node name="CenterMarker" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = SubResource("GradientTexture2D_rj7eu")
